# MLH-archiver

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  _typos.toml  devbox.json  example_archiver_config.yaml  example_parser_config.yaml
anonymizer/: Containerfile  Makefile  README.md  compose.yaml  noxfile.py  pyproject.toml
anonymizer/src/: main.py
anonymizer/src/mlh_anonymizer/: __init__.py  anonymizer.py  configs.py  constants.py  dataframe_processor.py  hasher.py  list_processor.py  main.py
anonymizer/tests/: test_anonymizer.py  test_hash.py
mlh_archiver/: Cargo.toml  Makefile  README.md
mlh_archiver/src/: brin_index.rs  config.rs  errors.rs  file_utils.rs  lib.rs  main.rs  otel.rs  range_inputs.rs  scheduler.rs  worker.rs
mlh_archiver/src/archive_writer/: data_lineage.rs  email_store.rs  error_log.rs  mod.rs  parquet_email_store.rs  progress.rs  raw_email_store.rs
mlh_archiver/src/nntp_source/: mod.rs  nntp_config.rs  nntp_lister.rs  nntp_utils.rs  nntp_worker.rs
mlh_archiver/src/public_inbox_source/: mod.rs  pi_config.rs  pi_lister.rs  pi_utils.rs  pi_worker.rs
mlh_archiver/tests/: Containerfile  test-compose.yaml  test_config.rs  test_nntp.rs  test_parquet_write.rs  test_public_inbox.rs  test_shutdown.rs
mlh_archiver/tests/test_nntp_server/: Containerfile  package-lock.json  package.json
mlh_archiver/tests/test_nttp_server/: index.js
mlh_archiver/tests/test_public_inbox/: Containerfile  generate_test_inboxes.pl
mlh_parser/: Cargo.toml  Containerfile  Makefile  README.md  compose.yaml  noxfile.py  pyproject.toml
mlh_parser/src/: config.rs  constants.rs  dataset_writer.rs  date_parser.rs  email_file_reader.rs  email_parser.rs  email_reader.rs  entities.rs  errors.rs  extractors.rs  lib.rs  lineage_parser.rs  main.py  main.rs  sanity_check.py
mlh_parser/src/mlh_parser/: __init__.py  configs.py  constants.py  date_parser.py  email_reader.py  parser.py  parser_algorithm.py
mlh_parser/tests/: base_email_parsers.py  complete_parsers.py  generate_complete_cases.py  helpers.py  test_attributions.rs  test_base_email_parsers.rs  test_complete_parsers.py  test_complete_parsers.rs  test_dates.rs  test_email_file_reader.rs  test_parse_mail.rs  test_parse_mail_at.py  test_patches.rs  test_synthetic_dates.py  test_synthetic_dates.rs
mlh_parser/tests/common/: mod.rs
mlh_parser/tests/complete_cases/: 14.headers.expected  26435.body.expected  26435.headers.expected  3383.body.pytest  3383.headers.expected  3383.headers.pytest  64764.body.expected  64764.headers.pytest  666.body.expected  666.headers.expected  de.denx.lists.u-boot-318022.body.pytest  de.denx.lists.u-boot-318022.eml  de.denx.lists.u-boot-318022.headers.pytest  dev.linux.lists.nvdimm-15401.body.expected  dev.linux.lists.nvdimm-15401.headers.expected  org.dpdk.dev-201311.code.expected  org.dpdk.dev-201311.eml  org.dpdk.dev-201311.headers.expected  org.freedesktop.lists.igt-dev-105099.body.pytest  org.freedesktop.lists.igt-dev-105099.eml  org.freedesktop.lists.igt-dev-105099.headers.expected  org.freedesktop.lists.igt-dev-105099.trailers.pytest  org.kernel.vger.fstests-24429.body.expected  org.kernel.vger.fstests-24429.code.expected  org.kernel.vger.fstests-24429.code.yaml  org.kernel.vger.fstests-24429.eml  org.kernel.vger.fstests-24429.headers.expected  org.kernel.vger.fstests-24447.body.expected  org.kernel.vger.fstests-24447.code.expected  org.kernel.vger.fstests-24447.headers.expected  org.kernel.vger.fstests-24447.trailers.pytest  org.kernel.vger.git-193405.eml  org.kernel.vger.git-266246.eml  org.kernel.vger.git-266246.headers.pytest  org.kernel.vger.lartc-186.body.pytest  org.kernel.vger.lartc-186.eml  org.kernel.vger.lartc-186.headers.expected  org.kernel.vger.linux-devicetree-773607.headers.expected  org.kernel.vger.linux-gpio-70687.body.expected  org.kernel.vger.linux-gpio-70687.eml  (+37 more)
mlh_parser/tests/date_cases/: 0000000001-e0-57ca0a1f200b994f0fface20de73e2b936fd64a1.date.expected  0000000001-e0-57ca0a1f200b994f0fface20de73e2b936fd64a1.eml  0000000001-e0-de92cf47bc933ca0da56b2c7e308c33119e65a85.date.expected  0000000001-e0-de92cf47bc933ca0da56b2c7e308c33119e65a85.eml  0000000002-e0-e1676a0319926cda0227cf2b742be35644082a62.date.expected  0000000002-e0-e1676a0319926cda0227cf2b742be35644082a62.eml  0000000050-e0-af529d532f7e195e571a8cfafeabfc861a4ab8a4.date.expected  0000000050-e0-af529d532f7e195e571a8cfafeabfc861a4ab8a4.eml  0000000897-e0-5e896ae6346fe2050063245a837c8dc18bcd870a.date.expected  0000000897-e0-5e896ae6346fe2050063245a837c8dc18bcd870a.eml  0000232403-e0-b38a2f575dbccf0b8d6f697082c4a765fbe68cbf.date.expected  0000232403-e0-b38a2f575dbccf0b8d6f697082c4a765fbe68cbf.eml  de.denx.lists.u-boot-604483.date.expected  de.denx.lists.u-boot-604514.date.expected  de.denx.lists.u-boot-604550.date.pytest  org.kernel.vger.linux-kernel-236731.date.pytest  org.kernel.vger.linux-kernel-25037.date.pytest  org.kernel.vger.linux-kernel-290312.date.pytest  org.kernel.vger.linux-kernel-41804.date.expected  org.kernel.vger.linux-kernel-634518.date.expected  org.kernel.vger.linux-kselftest-60891.date.pytest  org.kernel.vger.netdev-2.date.expected  org.kernel.vger.netdev-271.date.pytest  org.kernel.vger.netfilter-9432.date.expected  org.kernel.vger.platform-driver-x86-39097.date.pytest  org.kvack.linux-mm-1224.date.pytest  (+4 more)
mlh_parser2/: Cargo.toml  README.md
mlh_parser2/src/: config.rs  constants.rs  dataset_writer.rs  date_parser.rs  email_file_reader.rs  email_parser.rs  email_reader.rs  errors.rs  extractors.rs  lib.rs  main.rs  parser.rs
mlh_parser2/tests/: test_attributions.rs  test_base_email_parsers.py  test_base_email_parsers.rs  test_complete_parsers.rs  test_dates.py  test_dates.rs  test_email_file_reader.rs  test_parse_mail.rs  test_parse_mail_at.py  test_parse_mail_at.rs  test_patches.rs  test_synthetic_dates.rs
scripts/: Makefile  generate_coverage_summary.py  peek_files.py  pyproject.toml
scripts/check_git/: Cargo.toml
scripts/check_nntp/: Cargo.toml
scripts/peek_parquet/: peek_files.py  pyproject.toml
(+99 files in other folders)
