[package]
name = "mlh_archiver"
version = "0.2.0"
edition = "2024"
build = "build.rs"


default-run = "mlh_archiver"

[dependencies]
anyhow = "1.0"
built = { version = "0.8", features = ["chrono", "semver" ] }
chrono = { version = "0.4", default-features = false, features = [
	"std",
	"now",
	"serde",
] }
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15", default-features = false, features = [
	"json",
	"yaml",
] }
crossbeam-channel = "0.5"
ctrlc = "3.5"
env_logger = { version = "0.11", features = ["kv"] }
glob = "0.3"
globset = "0.4"
inquire = { version = "0.9", default-features = false, features = ["termion"] }
log = { version = "0.4", features = ["kv", "std"] }
nntp = { path = "./rust-nntp" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
git2 = { version = "0.20.4", features = ["vendored-libgit2"] }

[dev-dependencies]
testcontainers = { version =  "0.27" , features = ["blocking"] }
walkdir = "2.5"

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree", "chrono", "semver",  "git2"] }
