[project]
name = "mlh-parser"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Rafael Passos", email = "rafael@rcpassos.me" }]
requires-python = ">=3.14"

dependencies = [
  "polars~=1.39",
  "python-dateutil>=2.9.0.post0",
  "tqdm~=4.67",
]

[project.scripts]
mlh-parser = "mlh_parser:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
# requires = ['setuptools']
# build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
pythonpath = ["./src"]

[dependency-groups]
dev = [
    "freezegun>=1.5",
    "nox>=2026.2",
    "pytest>=9.0",
    "pytest-cov>=6.0",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", ".venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


