[package]
name = "mlh_parser2"
version = "0.2.0"
edition = "2024"

[dependencies]

anyhow = "1.0"
built = { version = "0.8", features = ["chrono", "semver" ] }
chrono = { version = "0.4", default-features = false, features = [
	"std",
	"now",
	"serde",
] }
chrono-tz = "0.10"
ctrlc = "3.5"
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15", default-features = false, features = [
	"json",
	"yaml",
] }
env_logger = { version = "0.11", features = ["kv"] }
log = { version = "0.4", features = ["kv", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
regex = "1"
glob = "0.3"

mlh_archiver = { path="../mlh_archiver/" }

#parquet
arrow = { version="58.2"}
mail-parser = { version = "0.11", features = ["full_encoding"] }
parquet = { version="58.2" }


[dev-dependencies]
testcontainers = { version =  "0.27" , features = ["blocking"] }
walkdir = "2.5"
tempfile = "3"

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree", "chrono", "semver",  "git2"] }

# otel
tracing = { version="0.1", features=["attributes"], optional=true}
tracing-subscriber = { version="0.3", optional=true}
opentelemetry = { version="0.31", optional=true }
opentelemetry_sdk = { version="0.31", optional=true }
opentelemetry-stdout = {version="0.31", optional=true}
opentelemetry-appender-tracing = { version="0.31", optional=true}
opentelemetry-otlp = { version="0.31", features=["http-proto", "reqwest-blocking-client"], optional=true }
opentelemetry-semantic-conventions = { version="0.31", optional=true }
tracing-core = { version="0.1", optional=true }
tracing-opentelemetry = { version="0.32", optional=true }

[features]
default = []
otel = [
	"dep:tracing",
	"dep:tracing-subscriber",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-stdout",
	"dep:opentelemetry-appender-tracing",
	"dep:opentelemetry-otlp",
	"dep:opentelemetry-semantic-conventions",
	"dep:tracing-core",
	"dep:tracing-opentelemetry"
]


