[project]
name = "mlh-scripts"
version = "0.1.0"
description = "Utility scripts for MLH project"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.39",
]

[project.scripts]
peek-files = "peek_files:main"
generate-coverage-summary = "generate_coverage_summary:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.0",
]
