[project]
name = "mlh-scripts"
version = "0.1.0"
description = "Utility scripts for MLH project"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.39",
]

# this is still unefective in uv
[project.scripts]
peek-files = "src/peek_files:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.0",
]
